roles/tbmq/resources/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: thingsboard-mqtt-broker
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - name: postgres
          imagePullPolicy: Always
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 5
            timeoutSeconds: 1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-database
  namespace: thingsboard-mqtt-broker
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgres
---
